  * Add new deb-src-control(5) manual page documenting the debian/control
    file contained in source packages.
    - it documents the X[SBC]- prefix. Closes: #476335
    - it documents the VCS-* fields too. Closes: #483119
    Thanks to Oxan van Leeuwen <oxan@oxanvanleeuwen.nl> who wrote it
    as part of the Google Code In program.

  [ Updated programs translations ]
  * Portuguese (Miguel Figueiredo).
  * Swedish (Peter Krefting).
  * Spanish (Javier Fernandez-Sanguino)

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated deselect translations ]
  * Spanish (Javier Fernandez-Sanguino)


 -- Guillem Jover <guillem@debian.org>  Thu, 29 Jul 2010 11:00:22 +0200

dpkg (1.15.8.6) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Ensure debian/source/local-options is always excluded from the source
    package even if the user provides customized -i or -I options.
    Closes: #597023
  * Fix Dpkg::Version's handling of version with a debian revision but an
    empty version (e.g. "-0.1"). Thanks to James Vega <jamessan@debian.org>
    for the patch. Closes: #597651
  * With "3.0 (quilt)" source package, create .pc/.quilt_series with the
    correct series file if the source package provides vendor specific patch
    sets.

  [ Guillem Jover ]
  * Disable by default usage of synchronous sync(2), as it causes undesired
    I/O on unrelated file systems. Closes: #588339, #595927, #600075
  * Add new --force-unsafe-io to disable safe I/O operations on unpack.
    Closes: #584254

  [ Updated man page translations ]
  * French (Christian Perrier). Including a typo fix and a typographical
    change reported by Vincent Danjean. Closes: #601852
  * Spanish (Omar Campagne). Closes: #596519

  [ Updated programs translations ]
  * Basque (Iñaki Larrañaga Murgoitio). Closes: #599923
  * Catalan (Jordi Mallach).